--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,28 +1,23 @@
 .header{
-    border: 4px solid black;
-    /* height: 300px; */
-    background-position: center center;
-    background-size: 100% 100%;
-}
-.header .logo{
-    height: 50px;
-}
-.title-container{
-    /* color: rgba(255, 255, 255, 0.699); */
-    text-align: center;
-    font-size: 2em;
+    /* border: 4px solid black; */
+    height: 30px;
+    /* background-position: center center; */
+    /* background-size: 100% 100%; */margin-bottom: 40px;
 }
 .nav{
-    margin-left: 200px;
+    /* margin-left: 200px; */
 }
 .nav li{
     display: inline;
     margin-left: 50px;
     
-  }
-  
-  .nav a{
+
+}
+
+.nav a{
     text-decoration: none;
-    /* color: rgba(255, 255, 255, 0.877); */
+    color: white;
+    font-size: 20px;
     font-weight: bold;
-  }
+
+}
